# dictation-battle

./: README.md
back-end/: go.mod  go.sum  main.go
contract/: Cargo.toml  README.md  build.rs
contract/app/: Cargo.toml
contract/app/src/: lib.rs
contract/chrono-quest/: Cargo.toml  build.rs
contract/chrono-quest/io/: Cargo.toml
contract/chrono-quest/io/src/: lib.rs
contract/chrono-quest/src/: challenge_ops.rs  contract.rs  lib.rs  time.rs
contract/chrono-quest/tests/: test.rs
contract/client/: Cargo.toml  build.rs
contract/client/src/: lib.rs
contract/src/: lib.rs
contract/tests/: gtest.rs
front-end/: .env.example  .gitignore  .prettierrc  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
front-end/app/: layout.tsx
front-end/src/: App.module.scss  App.scss  App.tsx  consts.ts  main.tsx
front-end/src/assets/: chrono_quest.meta.txt  dictation_battle.idl
front-end/src/components/: ApiLoader.tsx  BaseModal.tsx  BattleFilter.tsx  BattleList.tsx  BattleModal.tsx  BattleSelectModal.tsx  Body.tsx  ChallengeModal.tsx  Copyright.tsx  Footer.tsx  Header.module.scss  Header.tsx  HostBattleButton.tsx  HostBattleModal.tsx  JoinBattleModal.tsx  Logo.tsx  PreviewCard.module.scss  PreviewCard.tsx  Sidebar.module.scss  Sidebar.tsx  Socials.tsx  TargetCard.tsx  TargetSelectModal.tsx  TargetViewer.tsx  Wallet.tsx
front-end/src/hocs/: ContractProvider.tsx  LocalThemProvider.tsx  ThemProviders.tsx  index.tsx
front-end/src/hooks/: api.ts
front-end/src/pages/: Battles.module.scss  (+5 more)
scripts/: crawl_english_online_at.py  newsinlevels_com.py
(+6 files in other folders)
