[workspace]

members = ["client"]


[package]
name = "dictation-battle"
version = "0.1.0"
edition = "2021"

[dependencies]
dictation-battle-app = { path = "app" }

[build-dependencies]
dictation-battle-app = { path = "app" }
sails-rs = { version = "0.6.2", features = ["wasm-builder"] }
sails-idl-gen = "0.6.2"

[dev-dependencies]
dictation-battle = { path = ".", features = ["wasm-binary"] }
dictation-battle-client = { path = "client" }
sails-rs = { version = "0.6.2", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }

[features]
wasm-binary = []
